[NEW]           Desktop: add a method to toggle between fullscreen and windowed
[NEW]           Desktop: add events for window resize, focus and unfocus
[NEW]           Mac: supports game controller
[NEW]           JSB: add cc.sys.now() and perfromance.now(), the last one is more accurate
[NEW]           Lua: add cc.vec3 functions: add, sub and dot
[NEW]           Lua: use luajit 2.1.0-beta2

[REFINE]        Add NDEBUG for cpp template Xcode project
[REFINE]        DrawNode: support float line width
[REFINE]        EditBoxDelegate: add reason for edit end
[REFINE]        Improve XML parse performance
[REFINE]        Make batch capacity resizing more efficiently
[REFINE]        PageView: support custom scrollToPage time
[REFINE]        Lua: cc.Ray:intersects addtionally returns the distance
[REFINE]        Mac: system font enhancement
[REFINE]        Linux: build shared lib with -fPIC
[REFINE]        Android: use SharedPreferences.apply() to store data
[REFINE]        JSB: Increase default JS heap to 32 mb
[REFINE]        JSB: Support more system languages
[REFINE]        JSB: Direct log/error for better understantding problems
[REFINE]        JSB: Separate FinalizeHook for ref objects and non ref objects
[REFINE]        Web: Improve overall node construction performance
[REFINE]        Web: Improve overall loading process performance
[REFINE]        Web: Reduce overall memory usage
[REFINE]        Web: Made cc.LabelBMFont and cc.LabelAtlas support texture packing and auto batching
[REFINE]        Web: Reimplement a much faster ccui.Scale9Sprite
[REFINE]        Web: Reimplement a much faster cc.DrawNode WebGL renderer
[REFINE]        Web: Use stack to avoid recursive call in transform, onEnter, onExit etc, reduce call stack depth


[FIX]           AsstsManagerEx: project.manifest may be downloaded twice
[FIX]           AudioEngine: can not play large ogg file
[FIX]           AudioEngine: may have noise if playing mp3 files on iOS/Mac OS X